2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_connected),
	(gnet_conn_http_conn_recv_response),
	(gnet_conn_http_conn_recv_headers),
	(gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data),
	(gnet_conn_http_conn_cb):
	  Fix behaviour when the server closes the connection (this is not
	  automatically an error). Fix retrieval of non-text data in
	  non-chunked mode (we would use _readline() for non-chunked mode,
	  but this might cause data at the end of the file to be lost if
	  the file is random binary data).

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data):
	  Don't forget to set the buffer_length member in our
	  GConnHttpEventData structure when emitting a PARTIAL_DATA
	  event.

	* tests/conn_http_test.c: (http_async_callback):
	  Check that GConnHttpEventData members are set for PARTIAL_DATA
	  events.

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_append_to_buf),
	(gnet_conn_http_new), (gnet_conn_http_set_user_agent):
	  Append comment with GNet version to any custom user agent
	  strings; minor indentation fix in _append_to_buf().

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Samuel Cormier-Iijima  <sciyoshi@gmail.com>

	* NEWS:
	* doc/gnet-sections.txt:
	* src/conn-http.c: (gnet_conn_http_set_uri_internal),
	(gnet_conn_http_set_uri), (gnet_conn_http_set_escaped_uri):
	* src/conn-http.h:
	  API: added gnet_conn_http_set_escaped_uri().

2006-10-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
	  Add guards for NULL input. A 0-length input to gnet_base64_encode()
	  should return an empty string and not NULL. In the case of
	  gnet_base64_decode(), use strlen(src) for all non-positive values